<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Registration">

    <include
        android:id="@+id/include"
        layout="@layout/drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:overScrollMode="ifContentScrolls"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="60dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="First Name"
                    android:inputType="text"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_mname"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:ems="10"
                    android:hint="Middle Name"
                    android:inputType="text"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="D.O.B"
                    android:inputType="date"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Phone Number"
                    android:inputType="number"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_poastal_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Address"
                    android:inputType="textPostalAddress"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/user_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/country_arrays"
                android:padding="15dp"
                android:prompt="@string/country_prompt"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/user_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="City"
                    android:inputType="text"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/gender"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/female"
                    android:textSize="20sp" />

            </RadioGroup>

            <Spinner
                android:id="@+id/user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/users_arrays"
                android:padding="15dp"
                android:prompt="@string/users_prompt"
                android:textSize="20sp" />

            <Button
                android:id="@+id/user_registration_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>